--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="using:App2"
+        xmlns:models="using:App2.Models"
+        xmlns:viewmodels="using:App2.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
@@ -77,6 +79,7 @@
                         </DropDownButton>
                         <Button x:Name="BtnEdit"
                                 Click="BtnEdit_Click"
+                                IsEnabled="{x:Bind ViewModel.CanEditServer, Mode=OneWay}"
                                 Padding="12,6">
                             <StackPanel Orientation="Horizontal">
                                 <FontIcon Glyph="&#xE70F;"
@@ -87,6 +90,7 @@
 
                         <Button x:Name="BtnRemove"
                                 Click="BtnRemove_Click"
+                                IsEnabled="{x:Bind ViewModel.CanRemoveServer, Mode=OneWay}"
                                 Padding="12,6">
                             <StackPanel Orientation="Horizontal">
                                 <FontIcon Glyph="&#xE74D;"
@@ -108,16 +112,16 @@
 
                 <ListView Grid.Row="2"
                           x:Name="ServersListView"
-                          ItemsSource="{x:Bind Servers}"
+                          ItemsSource="{x:Bind ViewModel.Servers, Mode=OneWay}"
+                          SelectedItem="{x:Bind ViewModel.SelectedServer, Mode=TwoWay}"
                           CanDragItems="True"
                           CanReorderItems="True"
                           AllowDrop="True"
                           SelectionMode="Single"
-                          SelectionChanged="ServersListView_SelectionChanged"
                           ScrollViewer.VerticalScrollBarVisibility="Auto">
 
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="local:ServerEntry">
+                        <DataTemplate x:DataType="models:ServerEntry">
                             <StackPanel Orientation="Vertical"
                                         Spacing="6"
                                         Margin="0,12,0,12">
@@ -234,7 +238,7 @@
                                     <TextBlock Grid.Row="0"
                                                Grid.Column="1"
                                                x:Name="TxtName"
-                                               Text="未选择"
+                                               Text="{x:Bind ViewModel.SelectedName, Mode=OneWay}"
                                                FontSize="16"
                                                FontWeight="SemiBold"
                                                TextWrapping="WrapWholeWords" />
@@ -254,7 +258,7 @@
                                     <TextBlock Grid.Row="1"
                                                Grid.Column="1"
                                                x:Name="TxtHost"
-                                               Text="未选择"
+                                               Text="{x:Bind ViewModel.SelectedHost, Mode=OneWay}"
                                                FontSize="16"
                                                TextWrapping="WrapWholeWords" />
 
@@ -270,7 +274,7 @@
                                     <TextBlock Grid.Row="2"
                                                Grid.Column="1"
                                                x:Name="TxtPort"
-                                               Text="未选择"
+                                               Text="{x:Bind ViewModel.SelectedPort, Mode=OneWay}"
                                                FontSize="16" />
 
                                     <StackPanel Orientation="Horizontal"
@@ -287,7 +291,7 @@
                                     <TextBlock x:Name="TxtMethod"
                                                Grid.Row="3"
                                                Grid.Column="1"
-                                               Text="未选择"
+                                               Text="{x:Bind ViewModel.SelectedMethod, Mode=OneWay}"
                                                FontSize="14"
                                                FontWeight="SemiBold"
                                                 />
@@ -310,11 +314,12 @@
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
 
                                         <StackPanel Orientation="Horizontal"
                                                     Spacing="6">
-                                            <FontIcon Glyph="&#xEC4A;"
+                                            <FontIcon Glyph="&#xE9D9;"
                                                       Foreground="#A67CA8"
                                                       VerticalAlignment="Center" />
                                             <TextBlock Text="网络延迟"
@@ -325,10 +330,26 @@
 
                                         <TextBlock Grid.Column="1"
                                                    x:Name="TxtLatency"
-                                                   Text="166 ms"
+                                                   Text="{x:Bind ViewModel.LatencyText, Mode=OneWay}"
+                                                   Foreground="{x:Bind ViewModel.LatencyForeground, Mode=OneWay}"
                                                    FontSize="20"
                                                    FontWeight="SemiBold"
-                                                   VerticalAlignment="Center" />
+                                                   VerticalAlignment="Center"
+                                                   Margin="0,0,8,0" />
+
+                                        <Button Grid.Column="2"
+                                                x:Name="BtnTestLatency"
+                                                Command="{x:Bind ViewModel.TestLatencyCommand}"
+                                                IsEnabled="{x:Bind ViewModel.CanTestLatency, Mode=OneWay}"
+                                                Background="Transparent"
+                                                BorderBrush="Transparent"
+                                                Padding="8"
+                                                ToolTipService.ToolTip="重新测试延迟"
+                                                VerticalAlignment="Center">
+                                            <FontIcon x:Name="IconTestLatency"
+                                                      Glyph="&#xE72C;"
+                                                      FontSize="14" />
+                                        </Button>
                                     </Grid>
                                 </Border>
 
@@ -357,18 +378,19 @@
                                     Spacing="12">
                             <ToggleButton x:Name="BtnStartStop"
                                           MinWidth="96"
-                                          Content="启动"
+                                          Content="{x:Bind ViewModel.StartStopButtonContent, Mode=OneWay}"
+                                          IsChecked="{x:Bind ViewModel.StartStopButtonChecked, Mode=OneWay}"
                                           Click="Button_Click" />
                             <StackPanel Orientation="Horizontal"
                                         VerticalAlignment="Center"
                                         Spacing="8">
                                 <FontIcon Glyph="&#xECCC;"
                                           x:Name="IconStatus" 
-                                          Foreground="Red"/>
+                                          Foreground="{x:Bind ViewModel.StatusIconForeground, Mode=OneWay}"/>
                                 <TextBlock x:Name="TxtStatus"
                                            VerticalAlignment="Center"
                                            FontWeight="SemiBold"
-                                           Text="状态：未启动" />
+                                           Text="{x:Bind ViewModel.StatusText, Mode=OneWay}" />
                             </StackPanel>
                             <Button Background="Transparent"
                                     BorderBrush="Transparent"
@@ -463,7 +485,7 @@
                                         <TextBlock Text="本地端口："
                                                    Foreground="{ThemeResource TextFillColorSecondaryBrush}" />
                                         <TextBlock x:Name="TxtLocalPortValue"
-                                                   Text="10808"
+                                                   Text="{x:Bind ViewModel.LocalPortText, Mode=OneWay}"
                                                    FontWeight="SemiBold" />
                                     </StackPanel>
                                 </Border>
@@ -479,8 +501,7 @@
                                            VerticalAlignment="Center"
                                            FontWeight="SemiBold"
                                            Margin="0,0,4,0" />
-                                <ComboBox SelectionChanged="ColorComboBox_SelectionChanged"
-                                          SelectedIndex="1"
+                                <ComboBox SelectedIndex="{x:Bind ViewModel.ProxyModeIndex, Mode=TwoWay}"
                                           MinWidth="100">
                                     <x:String>全局模式</x:String>
                                     <x:String>PAC模式</x:String>
